--- a/MyToolBox/MainWindow.xaml
+++ b/MyToolBox/MainWindow.xaml
@@ -7,7 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="N329x SD Make" Click="Button_Click_N329x_SD_Make" HorizontalAlignment="Left" Margin="42,31,0,0" VerticalAlignment="Top" Width="232" Height="50" FontSize="20" FontWeight="Bold"/>
+        <Button x:Name="ButtonName_SD_Burn" Content="N3290x SD Burn" Click="ButtonClick_N3290x_SD_Burn" HorizontalAlignment="Left" Margin="40,30,0,0" VerticalAlignment="Top" Width="232" Height="50" FontSize="20" FontWeight="Bold"/>
+        <Button Content="N3290x_SPIFLASH_Make" Click="ButtonClick_N3290x_SPIFLASH_Make" HorizontalAlignment="{Binding HorizontalAlignment,ElementName=ButtonName_SD_Burn}" Margin="40,100,0,0" VerticalAlignment="{Binding VerticalAlignment,ElementName=ButtonName_SD_Burn}" Width="{Binding Width,ElementName=ButtonName_SD_Burn}" Height="{Binding Height,ElementName=ButtonName_SD_Burn}" FontSize="{Binding FontSize,ElementName=ButtonName_SD_Burn}" FontWeight="{Binding FontWeight,ElementName=ButtonName_SD_Burn}"/>
+        <Button Content="Bin2Dat" Click="ButtonClick_bin2dat" HorizontalAlignment="{Binding HorizontalAlignment,ElementName=ButtonName_SD_Burn}" Margin="40,170,0,0" VerticalAlignment="{Binding VerticalAlignment,ElementName=ButtonName_SD_Burn}" Width="{Binding Width,ElementName=ButtonName_SD_Burn}" Height="{Binding Height,ElementName=ButtonName_SD_Burn}" FontSize="{Binding FontSize,ElementName=ButtonName_SD_Burn}" FontWeight="{Binding FontWeight,ElementName=ButtonName_SD_Burn}"/>
 
     </Grid>
 </Window>
