--- a/MyToolBox/N3290x_SD_Burn.xaml
+++ b/MyToolBox/N3290x_SD_Burn.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Name="window" x:Class="MyToolBox.N329x_SD_Make"
+﻿<Window x:Name="window" x:Class="MyToolBox.N3290x_SD_Burn"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MyToolBox"
         mc:Ignorable="d"
-        Title="N329x_SD_Make" Height="211" Width="880">
+        Title="N3290x_SD_Burn" Height="211" Width="880">
     <Window.Resources>
         <ZoomPercentageConverter x:Key="ZoomPercentageConverter"/>
     </Window.Resources>
