--- a/MyToolBox/App.xaml
+++ b/MyToolBox/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MyToolBox"
-             StartupUri="Bin2Dat.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
 
     </Application.Resources>
